# advent-of-code-2020

./: LICENSE.md  README.md  advent-of-code.cabal  day1-a.hs  day1-b.hs
app/: Main.hs
puzzles/day1a/: Main.hs
puzzles/day1b/: Main.hs
puzzles/day2a/: Main.hs
puzzles/day2b/: Main.hs
src/: Day1.hs  Day1a.hs  Day1b.hs  Day2a.hs  Day2b.hs  Split.hs  Util.hs
test/Day1/: Main.hs
