name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Markus Kauppila
maintainer:          markus.kauppila@gmail.com
copyright:           2021 Markus Kaupila
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Day1
  build-depends:       base >= 4.7 && < 5

executable day1
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       advent-of-code

test-suite day1-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test/day1
  main-is: Main.hs
  default-language:  Haskell2010
  build-depends: base >= 4.7 && < 5,
                 HUnit >= 1.6 && < 2.0,
                 advent-of-code
