name:                advent-of-code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/mkauppila/<fix-this>
license:             MIT
license-file:        LICENSE.md
author:              Markus Kauppila
maintainer:          markus.kauppila@gmail.com
copyright:           2021 Markus Kaupila
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Day1a, Day1b, Util
  build-depends:       base >= 4.7 && < 5

executable day1a
  hs-source-dirs:      puzzles/day1a
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       advent-of-code

executable day1b
  hs-source-dirs:      puzzles/day1b
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       advent-of-code

test-suite day1-test
  type: exitcode-stdio-1.0
  hs-source-dirs: test/day1
  main-is: Main.hs
  default-language:  Haskell2010
  build-depends: base >= 4.7 && < 5,
                 HUnit >= 1.6 && < 2.0,
                 advent-of-code
